2004-11-09 22:42  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XGBitmapImageRep.m: Remove dead file.
	* Source/x11/GNUmakefile: Remove reference.

2004-11-09 22:15  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m (fix_path): Don't prepend the path to absolute
	file names.
	(-initWithFontName:matrix:screenFont:): Initialize cachedGlyph.
	(-advancementForGlyph:): Handle NSNullGlyph.
	(-glyphForCharacter:): Return NSNullGlyph if there's no glyph for
	the character.

2004-11-09 19:00  Alexander Malmberg <alexander@malmberg.org>

	* Tools/gpbs.m (main): If we get a -GSStartupNotification argument,
	post the notification after initializing. Fixes bug #10876.

2004-11-04  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/x11/XGServerEvent.m (process_key_event): Modifier detection:
	If default "GSModifiersAreKeys" is YES, ignore 'shift' and/or other
	state and just map keypress to first modifier for they key.
	* Documentation/Back/DefaultsSummary.gsdoc: Document new default
	"GSModifiersAreKeys".
	* Source/xlib/XGBitmap.m (_bitmap_combine_alpha()): corrected typo
	in error message.

2004-10-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGContext.m  (+initializeBackend): Use anti-aliaesd
	fonts when available and not specified otherwise.
	* Documentation/Back/DefaultsSummary.gsdoc: Document that AA fonts
	are now the default for xlib.

2004-09-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m (initialize_keyboard): Corrected typo
	reported by Benhur Stein <benhur.stein@gmail.com>.

2004-09-24  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/x11/XGServerEvent.m: Improvement of earlier update to
	determine modifiers from KeySyms rather than KeyCodes: in
	process_key_event, KeySym is now looked up taking shift/compose
	modifier state into account, while in handling of KeyMapNotify in
	processEvent: this state is also considered in the majority of cases.