@@ -1,3 +1,8 @@
+2004-11-10  Matt Rice <ratmice@yahoo.com>
+
+	* Source/x11/XGServerWindow.m (-iconSize): Implement new method.
+	(-iconTileImage:): ditto.
+
 2004-11-09 22:42  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/x11/XGBitmapImageRep.m: Remove dead file.
